<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:padding="12dp"
        android:elevation="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textSize="21sp"
            android:gravity="center"
            android:text="@string/add_image_label"/>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/viewCamera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/viewCamera"
        app:layout_constraintEnd_toEndOf="@+id/viewCamera"
        app:layout_constraintStart_toStartOf="@+id/viewCamera"
        app:layout_constraintTop_toTopOf="@+id/viewCamera"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        style="@style/AppTheme.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/viewCamera"
        app:layout_constraintStart_toStartOf="@+id/viewCamera"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/viewGallery"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/viewGallery"
        app:layout_constraintEnd_toEndOf="@+id/viewGallery"
        app:layout_constraintStart_toStartOf="@+id/viewGallery"
        app:layout_constraintTop_toTopOf="@+id/viewGallery"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        style="@style/AppTheme.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/viewGallery"
        app:layout_constraintStart_toStartOf="@+id/viewGallery"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/pbLoading"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
